--- a/index.html
+++ b/index.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+   <link rel="stylesheet" type="text/css" href="styles.css">
+   <header>
+      <a href="https://www.justinconnerportfolio.com">Check out my portfolio!</a>
+    </header>
+      <body>
+<main>Click the link above to download my resume, schedule an interview, check out my GitHub or my LinkedIn profile.</main>
+<div class="container"><img src="images/launchcode.png" alt="launchcode rocket">
+<img src="images/fulllogolaunchcode.png" alt="launchcode full logo">  <img src="images/launchcode.png" alt="launchcode rocket"></div>
+<center>LaunchCode</center>
+    <div id ="paragraph"><article>
+      <p>      When I was in third grade I "discovered" a cool new type of Origami.  If you look on the internet you can find 
+      it by typing into Google "jeff benyon spiral" yes I put his name in lower case. If you would like to see an 
+      example of what it looks like as created by me, the original "discoverer" follow this link.
+       <a href="https://drive.google.com/file/d/1-QsGtcfW0xEQgbXLZyRvL28q1nLPo816/view?usp=sharing">OG Folder</a>
+      </p>
+      <p>
+               I am a firm believer that there isn't really any true invention.  I believe that all things that are to be or could be,
+         have and do exist independant of those who claim to have "invented" them. There is really only the concept that some 
+         are the first to publish or make known that they have made the "invention".
+      </p>
+   <p>
+           Aside from that quirky little tid bit I like to be goofy and make videos when I am having a few brewskis. If you want to see some 
+     of my comedic escapades it is as simple as follwing this link <a href="https://drive.google.com/file/d/161TZCzG3IUBewsknDx3Ox_
+     4vA3XRQJa6/view?usp=sharing">My fridge is cool, Literally</a> Some might say that is "childish".  Well if that is your opinion you 
+     will be happy to know that I was a child actor as well, in the Movie <u>HOME ALONE</u> it's just as easy as following this link. 
+     <a href="https://drive.google.com/file/d/1lqvKfzPFUr9TOJXsbkr9tcdddfDBFxtY/view?usp=sharing">Child Actor</a>
+     </p>
+     <p>      I know what you are thinking...This dude writes programs, drinks beers, was a child actor, is setting up his own server and
+       is super nice? What is it that this guy doesn't do? Well I can tell you one more thing I do do (lol he said doo doo).  
+       I love to make graphic art as well as draw and paint.  you can find my most recent little diddy by following this link. 
+       <a href="https://drive.google.com/file/d/1lqvKfzPFUr9TOJXsbkr9tcdddfDBFxtY/view?usp=sharing">Art Game Homie</a>In case you were curious
+       yes I dropped the dirty little beat in the background too.
+     </p>
+       <p>
+               So if you read all this without clicking on my portfolio link at the top first, that takes you to my GitHub, that takes you to 
+         where you will find my "Fun Factos" (located in my GitHub READEME.md file that also has a cool profile visitor tracker written in 
+         markdown), then I guess you took the long route. aint nothin' wrong with that Jack! 
+       </p>
+      
+   </article></div>
+    <script src="script.js"></script>
+   <p>I am having a great time exploring how to get my Kemp Load Balancer 
+      set up to distribute the network traffic for my home server to the different support servers: <br>softether VPN
+      <br> Redis (supports different kinds of abstract data structures)<br>MySql Database<br>lightpd webserver<br>
+      MindsDB (Machine Learning / Artificial Intelligence)<br>Voip / PBX (phone over internet) <br>TsPlus (remote desktop)
+      <br> All to host my website for the final project if I do infact accomplish all this. I sure hope to.</p>
+  </body>
+  <footer>
+   &copy; Justin Conner 2023
+ </footer>
 </html>
