--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       </p>
    <p>
            Aside from that quirky little tid bit I like to be goofy and make videos when I am having a few brewskis. If you want to see some 
-     of my comedic escapades it is as simple as follwing this link <a href="https://drive.google.com/file/d/161TZCzG3IUBewsknDx3Ox_
-     4vA3XRQJa6/view?usp=sharing">My fridge is cool, Literally</a> Some might say that is "childish".  Well if that is your opinion you 
+     of my comedic escapades it is as simple as follwing this link <a href="https://drive.google.com/file/d/161TZCzG3IUBewsknDx3Ox_4vA3XRQJa6/view?usp=sharing">My fridge is cool, Literally</a> Some might say that is "childish".  Well if that is your opinion you 
      will be happy to know that I was a child actor as well, in the Movie <u>HOME ALONE</u> it's just as easy as following this link. 
      <a href="https://drive.google.com/file/d/1lqvKfzPFUr9TOJXsbkr9tcdddfDBFxtY/view?usp=sharing">Child Actor</a>
      </p>
